--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,7 +59,7 @@ body {
   position: fixed;
   margin-left: 500px;
   margin-top: 110px;
-  height: 300px;
+  height: fit-content;
   width: 400px;
   background-color: #88414A;
   border-radius: 10px;
@@ -101,4 +101,31 @@ body {
   border: none;
   font-family: 'Montserrat';
   margin-top: 30px;
+}
+
+/* Give space + structure to input rows */
+.field_pod {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+/* Make register and login buttons match better */
+.modal button {
+  background-color: #2C3E29;
+  color: #CCE2EA;
+  padding: 8px 0;
+  cursor: pointer;
+}
+
+/* Style for the tiny "Register" / "Log in" link buttons */
+.modal .link-btn {
+  background: none;
+  border: none;
+  color: #CCE2EA;
+  font-family: 'Montserrat';
+  text-decoration: underline;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 14px;
 }
